# jsonformer-claude

./: .gitignore  README.md  example.py  great_gatsby_example.py  pyproject.toml
examples/: enum_example.py  enum_sample.py  recursion_sample.py  union_sample.py
jsonformer_claude/: __init__.py  main.py
jsonformer_claude/fields/: array.py  base.py  bool.py  integer.py  string.py
